# CUDA_image_preprocessing

./: README.md  cuda_image_preprocessing.cpp
cuda_image_preprocessing/: image_preprocessing.cu  image_preprocessing.h
model_inference/: CMakeLists.txt  image_preprocessing.cu  image_preprocessing.h  inference.cpp
